fixed plantDetailsOn img distortion

--- a/src/components/PlantCard/PlantCard.module.css
+++ b/src/components/PlantCard/PlantCard.module.css
@@ -62,6 +62,12 @@
   border-radius: 8px; 
   margin-right: 15px; 
 }
+.plantCardDetailsOn img{
+  width: 110px; 
+  height: 110px; 
+  border-radius: 8px; 
+  margin-right: 15px;
+}
 .plantNames { 
   flex-grow: 1;
   display: flex; 
